--- a/etc/kolla/globals.yml
+++ b/etc/kolla/globals.yml
@@ -295,6 +295,7 @@
 #enable_hyperv: "no"
 #enable_influxdb: "{{ enable_monasca | bool or (enable_cloudkitty | bool and cloudkitty_storage_backend == 'influxdb') }}"
 #enable_ironic: "no"
+#enable_ironic_genericswitch: "{{ enable_neutron | bool and enable_ironic | bool }}"
 #enable_ironic_ipxe: "no"
 #enable_ironic_neutron_agent: "{{ enable_neutron | bool and enable_ironic | bool }}"
 #enable_ironic_pxe_uefi: "no"
